# langbot-agent-runner

./: .gitignore  README.md  pyproject.toml
_shared/langbot_agent_runner_utils/: __init__.py  config.py  context.py  dify_client.py  http.py  result.py
acp-agent-runner/: .gitignore  README.md  daemon.py  main.py  manifest.yaml  requirements.txt
acp-agent-runner/components/: __init__.py
acp-agent-runner/components/agent_runner/: __init__.py  default.py  default.yaml
acp-agent-runner/pkg/: __init__.py  acp_client.py  daemon_hub.py  prompt.py
claude-code-agent/: README.md  daemon.py  main.py  manifest.yaml  requirements.txt
claude-code-agent/components/agent_runner/: default.py  default.yaml
claude-code-agent/pkg/: __init__.py  cli.py  injection.py  native_cli.py  output_parser.py  remote_client.py  remote_daemon.py  runner_utils.py  steering.py
codex-agent/: .gitignore  README.md  daemon.py  main.py  manifest.yaml
codex-agent/components/agent_runner/: default.py  default.yaml
codex-agent/pkg/: __init__.py  cli.py  injection.py  native_cli.py  output_parser.py  remote_client.py  remote_daemon.py  runner_utils.py
coze-agent/: README.md  main.py  manifest.yaml
coze-agent/components/agent_runner/: default.py  default.yaml
coze-agent/pkg/: __init__.py  coze_client.py
dashscope-agent/: README.md  main.py  manifest.yaml  requirements.txt
dashscope-agent/components/agent_runner/: default.py  default.yaml
dashscope-agent/pkg/: __init__.py  dashscope_client.py
deerflow-agent/: README.md  main.py  manifest.yaml
deerflow-agent/components/agent_runner/: default.py  default.yaml
deerflow-agent/pkg/: __init__.py  deerflow_client.py  errors.py  stream_utils.py
dify-agent/: README.md  __init__.py  main.py  manifest.yaml
dify-agent/components/: __init__.py
dify-agent/components/agent_runner/: __init__.py  default.py  default.yaml
dify-agent/pkg/: __init__.py
docs/: LOCAL_AGENT_MIGRATION_PLAN.md  MIGRATION_PLAN.md
langbot_agent_runner/: __init__.py
langflow-agent/: README.md  main.py  manifest.yaml  requirements.txt
langflow-agent/components/agent_runner/: default.py  (+1 more)
langflow-agent/pkg/: __init__.py  langflow_client.py
litellm-agent-platform-agent/: README.md  main.py  manifest.yaml  requirements.txt
litellm-agent-platform-agent/components/: __init__.py
litellm-agent-platform-agent/pkg/: __init__.py  langbot_mcp_gateway.py  litellm_agent_platform_client.py
n8n-agent/: README.md  main.py  manifest.yaml  requirements.txt
n8n-agent/pkg/: __init__.py  n8n_client.py
remote_agent_daemon/: __init__.py  __main__.py  core.py
tbox-agent/: README.md  main.py  manifest.yaml  requirements.txt
tbox-agent/pkg/: __init__.py  tbox_client.py
tests/: __init__.py  test_plugin_layout.py  test_steering.py  test_traditional_runner_protocol_fixes.py
tests/contract/: __init__.py  test_runner_contract.py
tests/dify/: conftest.py  test_dify_runner.py
tests/fixtures/: __init__.py  conftest.py  fake_native_cli.py
weknora-agent/: README.md  main.py  manifest.yaml
weknora-agent/pkg/: __init__.py  errors.py  weknora_client.py
(+10 files in other folders)
