[project]
name = "langbot-agent-runner"
version = "0.1.0"
description = "Official AgentRunner plugins for LangBot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LangBot Team" }]
keywords = ["langbot", "agent", "runner", "plugin"]

dependencies = [
    "langbot-plugin>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyyaml>=6.0.0",
    "respx>=0.21.0",
    "aiohttp>=3.9.0",
    "socksio>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyyaml>=6.0.0",
    "respx>=0.21.0",
    "aiohttp>=3.9.0",
    "socksio>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.uv.sources]
langbot-plugin = { path = "../langbot-plugin-sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["_shared/langbot_agent_runner_utils"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "dify-agent", "_shared", "../langbot-plugin-sdk/src"]